# DjangoCourseForBegineers

Additionals/: Isoyear.md
Module1_Introduction_to_WebDev_And_Django/: Readme.md
Module2_Django_Models_And_ORM/: Readme.md
Module3_DjangoViews_And_URL_Routing/: Readme.md
Module4_DjangoTemplates/: Readme.md
Module5_DjangoViews/: Readme.md
Module6_DjangoRestFramework/: Readme.md
Module7_Db_Optimization/: Readme.Md
Module8_DeployingDjangoApps/: Readme.Md
My_project/: db.sqlite3  pyproject.toml
My_project/my_app/: forms.py  urls.py  views.py
My_project/my_auth/: forms.py  models.py  urls.py  views.py
My_project/my_blog/: admin.py  models.py  urls.py  views.py
My_project/my_blog/migrations/: 0005_alter_blog_thumbnail.py  0006_alter_blog_thumbnail.py
My_project/my_project/: settings.py  urls.py
My_project/staticfiles/css/: style.css
My_project/staticfiles/js/: main.js
My_project/templates/: base.html  header.html  home.html
My_project/templates/authentication/: activationlink.txt  email_change_confirmation.html  login.html  register.html  request-reset-password.html  reset-user-password.html  set-new-password.html
My_project/templates/blogs/: blog_listing.html
My_project/templates/contact/: contact.html
My_project_drf/: db.sqlite3
Z_Bonuses/: Resources.Md  (+2 more)
djangobegineerproject/: pyproject.toml
djangobegineerproject/my_project/: db.sqlite3
djangobegineerproject/my_project/my_app1/: admin.py  models.py
djangobegineerproject/my_project/my_app1/migrations/: 0001_initial.py
djangobegineerproject/my_project/my_project/: settings.py
(+44 files in other folders)
